--- a/docs/e-1数据库.md
+++ b/docs/e-1数据库.md
@@ -1,5 +1,33 @@
 #  Mysql
 
+## MySQL的存储引擎选择
+- 不要多说，选InnoDB
+## 选择优化的数据类型
+- 更小的通常更好
+- 简单就好
+- 尽量避免NULL
+### 整数类型
+- TINYINT,SMALLINT,MEDIUMINT,INT,BIGINT
+- 分别是8，16，24，32，64位
+- UNSIGNED属性，表示不允许负值，正数上限范围提高一倍
+- MySQL可以为整数类型指定宽度INT（11），对大多数应用这是没有意义的，不会限制值的合法范围，只是规定了显示字符的个数。
+### 实数类型
+- DECIMAL用于存储精确的浮点数，是在MYSQL服务器实现的，不是CPU，因此性能低下
+- FLOAT和DOUBLE是不精确的
+- 可以使用BIGINT乘上相应的倍数来代替，DECIMAL
+
+### 字符串类型
+- VARCHAR和CHAR
+-  存储在磁盘和内存中的方式和使用的存储引擎有关
+- VARCHAR用于存储可变长字符串，需要使用1或2个额外的字节记录字符串的长度。
+- CHAR 定长字符串。
+
+### 使用枚举(ENUM)代替字符串类型
+
+### 日期和时间类型
+- DATETIME能保存大范围的值
+- TIMESTAMP 只使用4个字节的存储空间，通常尽量使用TIMESTAMP，空间效率高
+
 ## 二叉树，B树，B+树
 
 ### B树的特点
