--- a/docs/c-4操作系统.md
+++ b/docs/c-4操作系统.md
@@ -1,1 +1,12 @@
-- 还没写
+# 操作系统
+
+## Linux的系统调用
+
+| Task     | Commands                  |
+| -------- | ------------------------- |
+| 进程控制 | fork();exit();mmap();     |
+| 进程通信 | pipe();shmget();mmap();   |
+| 文件操作 | open();read();write();    |
+| 设备操作 | ioctl();read();write();   |
+| 信息维护 | getpid();alarm();sleep(); |
+| 安全     | chmod();umask();chown();  |
