--- a/docs/a-1并发面试.md
+++ b/docs/a-1并发面试.md
@@ -2,7 +2,7 @@
 
 ## 线程基础
 
-### 1.什么是线程线程死锁?如何避免死锁?
+### 1.什么是线程死锁?如何避免死锁?
 
 多个线程同时被阻塞，它们中的一个或者全部都在等待某个资源被释放
 
@@ -56,13 +56,13 @@ CAS指令执行时，当且仅当内存地址V的值与预期值A相等时，将
 
 monitor enter：
 
-每个对象有一个监视器锁（monitor）。当monitor背占用时就会处于锁定状态，线程执行monitor enter指令时尝试获取monitor的所有权。
+每个对象有一个监视器锁（monitor）。当monitor被占用时就会处于锁定状态，线程执行monitor enter指令时尝试获取monitor的所有权。
 
 1、如果monitor的进入数为0，则该线程进入monitor，然后将进入数设置为1，该线程即为monitor的所有者。
 
 2、如果线程已经占有该monitor，只是重新进入，则进入monitor的进入数加1
 
-3、如果其他线程已经占用了monitor，则该线程进入阻塞状态，知道monitor的进入数为0，再重新尝试获取monitor的所有权。
+3、如果其他线程已经占用了monitor，则该线程进入阻塞状态，直到monitor的进入数为0，再重新尝试获取monitor的所有权。
 
 monitor exit：
 
@@ -171,6 +171,8 @@ monitor exit：
 我们还要注意`Entry`， 它的`key`是``ThreadLocal`<?> k` ，继承自`WeakReference， 也就是我们常说的弱引用类型。
 
 ### GC 之后key是否为null？
+
+不为null
 
 - **强引用**：我们常常new出来的对象就是强引用类型，只要强引用存在，垃圾回收器将永远不会回收被引用的对象，哪怕内存不足的时候
 - **软引用**：使用SoftReference修饰的对象被称为软引用，软引用指向的对象在内存要溢出的时候被回收
