--- a/docs/a-1并发面试.md
+++ b/docs/a-1并发面试.md
@@ -70,6 +70,12 @@ monitor exit：
 
 指令执行时，monitor的进入数减1，如果减1后进入数为0，那线程退出monitor，不再是这个monitor的所有者。其他被这个monitor阻塞的线程可以尝试去获取这个 monitor 的所有权。 
 
+### 7.如果一个线程发生异常没有捕获会发生什么？
+
+Thread类中有一个`dispatchUncaughtException`方法,这个方法的作用是分发异常信息到正确的`UncaughtExceptionHandler`。当线程运行中出现了未捕获的异常，JVM会调用线程的这个方法，来寻找一个`UncaughtExceptionHandler`处理异常。
+
+`getUncaughtExceptionHandler`的获取逻辑是，如果此线程的`uncaughtExceptionHandler`属性不为`null`,则分发异常到线程自己的`uncaughtExceptionHandler`，否则将异常分发给此线程所在的线程组。
+
 ## 锁
 
 > 锁的状态总共有四种：无锁状态、偏向锁、轻量级锁和重量级锁
@@ -143,12 +149,13 @@ monitor exit：
 `ThreadPoolExecutor`其他常见参数:
 
 - **`keepAliveTime`**:当普通线程池中的线程数量大于 `corePoolSize`核心线程池数量 的时候，如果这时没有新的任务提交，普通线程不会立即销毁，而是会等待，直到等待的时间超过了 `keepAliveTime`才会被回收销毁；
-
 - **`unit`** : `keepAliveTime` 参数的时间单位。
-
 - **`threadFactory`** :executor 创建新线程的时候会用到。
-
 - **`handler`** :饱和策略。关于饱和策略下面单独介绍一下。
+
+### 当线程池满的时候会发生什么
+
+如果创建新线程将使当前运行的线程超出maximumPoolSize，任务将被拒绝，并调用RejectedExecutionHandler.rejectedExecution()方法。
 
 ### 3.ThreadPoolExecutor的工作流程?
 
