--- a/docs/a-7基础.md
+++ b/docs/a-7基础.md
@@ -1,3 +1,8 @@
+# java内存模型
+
+- Java 内存模型，描述的是多线程允许的行为
+- JVM 内存结构，描述的是线程运行所设计的内存空间
+
 # Java基础
 
 ## 1.Java的8种基本类型
@@ -40,9 +45,9 @@ replace是基于字符的替换，replaceAll是基于正则表达式的替换。
 
 ## 6.C++多态和java多态实现有什么不同点？
 
-## OS
+# OS
 
-### 1.进程和线程的区别？
+## 1.进程和线程的区别？
 
 Ⅰ 拥有资源
 
@@ -60,7 +65,7 @@ replace是基于字符的替换，replaceAll是基于正则表达式的替换。
 
 线程间可以通过直接读写同一进程中的数据进行通信，但是进程通信需要借助 IPC。
 
-### 2.进程间通信的方式？
+## 2.进程间通信的方式？
 
 1. 管道，fd[0]用于读,fd[1]用于写
 
