--- a/docs/a-6设计模式.md
+++ b/docs/a-6设计模式.md
@@ -5,6 +5,12 @@
 > 确保一个类只有一个实例，并提供该实例的全局访问点。
 >
 > 使用一个私有构造函数、一个私有静态变量以及一个公有静态函数来实现。
+>
+> 懒汉式是线程不安全的，可以使用DCL双重检查锁定来实现高效的懒汉式实现。
+>
+> 饿汉式是线程安全的。采用直接实例化的方式来实现，但是丢失了延时实例化带来的节约资源的好处。
+
+双重检验锁定DCL：双重检查锁定需要给单例对象加上一个volatile，这里因为为了防止在new 一个单例时发生指令重排序，因为根据java对象的创建过程，第一步会先给单例对象分配内存空间，第二步给单例对象初始化，第三步再指向堆内存中的单例对象。如果期间发生了指令重排序会先执行第一步和第三步就会拿到一个还未初始化的对象，所以是有必要给单例对象加上一个volatile。
 
 ```
 public class Singleton {
@@ -179,6 +185,10 @@ public class ImageViewer {
     }
 }
 ```
+
+### 动态代理设计模式
+
+
 
 ### Spring中的应用
 
